@@ -5,6 +5,7 @@
 === 1.0.26 ===
 * Updated implementation of fdsync() for Windows.
 * Updated definition of LSP_HIDDEN_MODIFIER under Windows.
+* Added test build for Windows using MSYS2.
 
 === 1.0.25 ===
 * Added Clang build for the CI.
